--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
+    "mongoose": "^5.11.19",
     "uuid": "^8.3.2"
   }
 }
